--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,4 +13,12 @@
 
     </com.scaleview.mingda.mapview.view.MapView>
 
+    <Button
+        android:id="@+id/scale"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="放大" />
+
 </RelativeLayout>
