增加放大功能

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -2,5 +2,6 @@
 <resources>
     <declare-styleable name="MapView">
         <attr name="map_background" format="reference"/>
+        <attr name="slide_background" format="reference|string"/>
     </declare-styleable>
 </resources>
