--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context="com.scaleview.mingda.mapview.MainActivity">
 
     <com.scaleview.mingda.mapview.view.MapView
+        android:id="@+id/mp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:map_background="@drawable/bg">
@@ -15,10 +16,10 @@
 
     <Button
         android:id="@+id/scale"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:text="放大" />
 
 </RelativeLayout>
